Add ability to set R boostrap directory, fix bugs unconvered by IDE changes